# my_traccc

./: CMakeLists.txt.save
core/include/traccc/seeding/detail/: seeding_config.hpp  seeding_config_atlas_mod.hpp
examples/run/cpu/: CMakeLists.txt  my_seeding_example.cpp
examples/run/cuda/: my_seeding_example_cuda.cpp
examples/simulation/: CMakeLists.txt  pu_simulate.cpp
io/: CMakeLists.txt
io/include/traccc/io/: mywrite.hpp
io/src/: mywrite.cpp
performance/include/traccc/resolution/: res_plot_tool_config.hpp
simulation/: CMakeLists.txt
simulation/include/traccc/simulation/: multi_vtx_simulator.hpp
